# ytdlplist

./: .gitignore  LICENSE  README.md  pyproject.toml
ytdlplist/: constants.py  playlist_util.py  utils.py  ytdlplist.py
